# RIONA-MED

./: .gitignore  CMakeLists.txt  RAPORT.md  RAPORT.tex  README.md  ZADANIE.md
data/: cars-mini.arff  cars-mini.csv  german.csv  yeast-mini.arff
include/: algorithms.h  arff_reader.h  dataset.h  distance.h  metrics.h  output.h  util.h
results-from-C#/_aggregated/: REPORT.txt
results-from-C#/_aggregated/cars-mini/: MIARY_STANDARD.csv  MIARY_ZNORMALIZOWANE.csv  TIMINGS.csv
results-from-C#/_aggregated/dermatology/: MIARY_STANDARD.csv  MIARY_ZNORMALIZOWANE.csv  TIMINGS.csv
results-from-C#/_aggregated/german/: MIARY_STANDARD.csv  MIARY_ZNORMALIZOWANE.csv  TIMINGS.csv
results-from-C#/_aggregated/tae/: MIARY_STANDARD.csv  MIARY_ZNORMALIZOWANE.csv  TIMINGS.csv
results-from-C#/cars-mini/knn-g-k1-svdm/: OUT_kNN_cars-mini_D2_R6_k1_SVDM_g.csv  STAT_kNN_cars-mini_D2_R6_k1_SVDM_g.txt  kNN_kNN_cars-mini_D2_R6_k1_SVDM_g.csv
results-from-C#/cars-mini/knn-g-k3-svdm/: OUT_kNN_cars-mini_D2_R6_k3_SVDM_g.csv  STAT_kNN_cars-mini_D2_R6_k3_SVDM_g.txt
results-from-C#/cars-mini/knn-g-klog2n-svdm/: STAT_kNN_cars-mini_D2_R6_k2_SVDM_g.txt
results-from-C#/cars-mini/knn-l-k1-svdm/: OUT_kNN_cars-mini_D2_R6_k1_SVDM_l.csv  STAT_kNN_cars-mini_D2_R6_k1_SVDM_l.txt  kNN_kNN_cars-mini_D2_R6_k1_SVDM_l.csv
results-from-C#/cars-mini/knn-l-k3-svdm/: STAT_kNN_cars-mini_D2_R6_k3_SVDM_l.txt
results/_aggregated/: REPORT.txt
scripts/: aggregate_release_stats.py  convert_arff_to_csv.py
src/: algorithms.cpp  arff_reader.cpp  distance.cpp  main.cpp  metrics.cpp  output.cpp  util.cpp
(+307 files in other folders)
